--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,10 @@
-@import url('https://fonts.googleapis.com/css2?family=Inconsolata&family=Josefin+Sans:ital,wght@1,300&family=Nanum+Gothic:wght@700&family=Open+Sans:ital,wght@1,600&family=Ubuntu:ital@0;1&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inconsolata&family=Josefin+Sans:ital,wght@1,300&family=Nanum+Gothic:wght@700&family=Open+Sans:ital,wght@1,600&family=Ubuntu:ital@0;1&family=Zilla+Slab:ital,wght@1,300&family=Pacifico&display=swap');
+
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
 
 .App-header {
   background: linear-gradient(to right, #43c6ac, #191654);
@@ -53,9 +59,25 @@
   font-family: 'Nanum Gothic', sans-serif
 }
 
+.card{
+  box-shadow: none;
+  width: 100%;
+}
+
+.card img{
+  width: 20rem;
+  height: 20rem;
+  margin: auto;
+  box-shadow: 0px 8px 5px 0px rgba(0,0,0,0.64);
+}
+
 .card-text {
   font-family: 'Josefin Sans', sans-serif;
   color: whitesmoke !important;
+}
+
+ul li a{
+  color: aliceblue;
 }
 
 /* form */
@@ -66,6 +88,9 @@
   display: flex;
   flex-direction: row;
   align-items: center;
+  transition: 0.9s all ease;
+  position: absolute;
+  top: 5rem;
 }
 
 .dataForm .input{
@@ -75,9 +100,20 @@
 
 .dataForm .input input{
   background: none;
+  color: whitesmoke;
+  border: none;
+  border-bottom: 2px solid rgb(103, 103, 255);
+  font-family: 'Inconsolata', monospace;
 }
+
 .dataForm .input input::placeholder{
- color: whitesmoke;
+  color: whitesmoke;
+  font-size: smaller;
+  font-style: italic;
+}
+
+.dataForm .input input:focus{
+  box-shadow: none;
 }
 
 .dataForm a span{
@@ -91,18 +127,69 @@ nav{
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  background-color: rgb(0, 89, 167);
   height: 10vh;
   width: 100%;
-  background: linear-gradient(to left, #43c6ac, #191654);
-  box-shadow: 0px 0px 20px 0px black;
-  display: none;
+  font-family: 'Pacifico', cursive;
+  background: linear-gradient(to left, #59c173, #a17fe0, #5d26c1);
+  box-shadow: 0px 4px 8px 0px black;
 }
+
 
 
 /* spinner */
 
 .spinner-border {
 visibility: hidden;
-margin: 1rem 0 1rem 0;
+margin: 5rem 0 1rem 0;
+}
+
+/* repos */
+
+.separator{
+  border: 1px solid rgba(255, 255, 255, 0.562);
+}
+
+li a{
+  font-family: 'Open Sans', sans-serif;
+}
+
+li span{
+  font-size: 1rem;
+  font-family: 'Ubuntu', sans-serif;
+}
+
+li p {
+  font-size: 1.2rem;
+  font-family: 'Zilla Slab', serif;
+}
+
+/* responsive design */
+
+@media only screen and (max-width: 1000px) {
+  .App-header{
+    height: 100%;
+    width: 100%;
+  }
+
+  .card img{
+    height: 15rem;
+    width: 15rem;
+  }
+
+html{
+  min-width: 100vw;
+}
+
+  .terminal{
+    margin: 0;
+  }
+
+  .dataForm .input input{
+    width: 35vw;
+    margin-left: 10px;
+  }
+
+  nav{
+    height: 4rem;
+  }
 }
